# photos-to-amazon-photos

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: design.md  requirements.md  tasks.md  upload-setup.md
scripts/: remediate_undated.sh  validate_library.sh  verify_date_heuristic_fix.sh
scripts/image_quality_detector/: .gitignore  README.md  pyproject.toml
scripts/image_quality_detector/image_quality_detector/: analyze.py  cli.py  discover.py  divider.py  ignore_list.py  naming.py  preview_links.py  quarantine.py  revert.py
scripts/image_quality_detector/tests/: test_analyze.py  test_cli.py  test_discover.py  test_ignore_list.py  test_naming.py  test_preview_links.py  test_quarantine.py  test_revert.py
scripts/orientation_correction/: .gitignore  README.md  pyproject.toml
scripts/orientation_correction/docs/: how-it-works.md
scripts/orientation_correction/models/: README.md
scripts/orientation_correction/orientation_correction/: cli.py  correct.py  discover.py  divider.py  ignore_list.py  infer.py  naming.py  preview_links.py  revert.py
scripts/orientation_correction/tests/: conftest.py  test_cli.py  test_correct.py  test_discover.py  test_divider.py  test_ignore_list.py  test_infer.py  test_naming.py  test_preview_links.py  test_revert.py
src/photos_to_amazon_photos/: cli.py  date_resolver.py  library_reader.py  namer.py  stager.py  tracking.py
tests/: test_cli.py  test_date_resolver.py  test_interrupt_recovery.py  test_library_reader.py  test_library_reader_integration.py  test_namer.py  test_stager.py  test_stager_integration.py  test_tracking.py
