[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "photos-to-amazon-photos"
version = "0.1.4"
description = "Stage photos, videos, and Live Photos from a local macOS Photos library for upload to Amazon Photos (and S3/Glacier for video)."
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
dependencies = [
    "osxphotos>=0.76.1",
]

[project.scripts]
photos-to-amazon-photos = "photos_to_amazon_photos.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/photos_to_amazon_photos"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
