[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orientation-correction"
version = "0.1.0"
description = "Detects and corrects sideways/upside-down photos in a staged photo directory, using the deep-image-orientation-detection ONNX model. See docs/how-it-works.md."
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
dependencies = [
    "onnxruntime>=1.20",
    "pillow>=11.0",
    "pillow-heif>=0.18",
    "numpy>=2.0",
]

[project.scripts]
orientation-correct = "orientation_correction.cli:main"
orientation-correct-revert = "orientation_correction.revert:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["orientation_correction"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
